--- a/Webmp4/ClientApp/package.json
+++ b/Webmp4/ClientApp/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "Webmp4",
+  "name": "webmp4",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^3.4.1",
     "react": "^16.0.0",
-    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
-    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "rimraf": "^2.6.2"
@@ -17,5 +14,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
   }
 }
