--- a/Webmp4/appsettings.json
+++ b/Webmp4/appsettings.json
@@ -7,5 +7,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "Secret": "$#5up3r!5up3r!Dup3r/*/!53cr37k3y!#$",
+  }
 }
