--- a/Webmp4/ClientApp/package.json
+++ b/Webmp4/ClientApp/package.json
@@ -10,6 +10,9 @@
     "react-is": "^16.8.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "rimraf": "^2.6.2",
     "styled-components": "^5.0.0-beta.8"
   },
