Всякие правки по фронту и бэку для логина и регистрации

--- a/Webmp4/appsettings.json
+++ b/Webmp4/appsettings.json
@@ -9,6 +9,6 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "Secret": "$#5up3r!5up3r!Dup3r/*/!53cr37k3y!#$",
+    "Secret": "$#5up3r!5up3r!Dup3r/*/!53cr37k3y!#$"
   }
 }
