Прикрутил регистрацию и авторизацию

--- a/Webmp4/appsettings.json
+++ b/Webmp4/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=webmp4db;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=webmp4444localdb;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
