--- a/Webmp4/ClientApp/package.json
+++ b/Webmp4/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "js-cookie": "^2.2.1",
     "jwt-decode": "^2.2.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.8.2",
