--- a/Webmp4/ClientApp/package.json
+++ b/Webmp4/ClientApp/package.json
@@ -11,6 +11,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-is": "^16.8.6",
+    "react-modal": "^3.9.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
