--- a/Webmp4/ClientApp/package.json
+++ b/Webmp4/ClientApp/package.json
@@ -10,6 +10,7 @@
     "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-recaptcha": "^2.0.0-rc.1",
     "react-is": "^16.8.6",
     "react-modal": "^3.9.1",
     "react-redux": "^7.1.0",
