--- a/Webmp4/ClientApp/package.json
+++ b/Webmp4/ClientApp/package.json
@@ -10,6 +10,7 @@
     "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.7",
     "react-google-recaptcha": "^2.0.0-rc.1",
     "react-is": "^16.8.6",
     "react-modal": "^3.9.1",
@@ -23,7 +24,7 @@
     "styled-components": "^5.0.0-beta.8"
   },
   "scripts": {
-    "start": "rimraf ./build && react-scripts start",
+    "start": "set PORT=80 && rimraf ./build && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
